--- a/src/style.css
+++ b/src/style.css
@@ -11,3 +11,8 @@ table, td {
     display: flex; 
     flex-direction: row;
 }
+.btn-favorite {
+    height: 85px;
+    width: 85px;
+    border-radius: 25%;
+}
