--- a/src/style.css
+++ b/src/style.css
@@ -25,3 +25,6 @@ table {
     border-radius: 25%;
     background-color: rgb(77, 187, 224);
 }
+.remove {
+    background-color: rgb(252, 122, 122);
+}
