--- a/src/style.css
+++ b/src/style.css
@@ -8,23 +8,55 @@ table, td {
     border-collapse: collapse;
 }
 
-table {
-    margin-right: 10px;
-}
-
 #container-main {
-    display: flex; 
-    flex-direction: row;
+    display: flex;
 }
 
-
-
-.btn-favorite {
-    height: 85px;
-    width: 85px;
-    border-radius: 25%;
+button {
+    border-color: black;
     background-color: rgb(77, 187, 224);
+    border-radius: 25%;
 }
-.remove {
-    background-color: rgb(252, 122, 122);
+
+@media screen and (min-width: 800px) {
+    table {
+        margin-right: 100px;
+    }
+    
+    #container-main {
+        flex-direction: row;
+    }
+    
+    
+    .btn-favorite {
+        height: 85px;
+        width: 85px;
+    }
+    .remove {
+        background-color: rgb(252, 122, 122);
+    }
+}
+
+@media screen and (max-width: 800px) {
+    table {
+        margin-bottom: 50px;
+    }
+    img {
+        width: 60px;
+        height: 60px;
+    }
+    select {
+        width:60px;
+        height:40px
+    }
+    button {
+        width: 75px;
+        height: 50px;
+    }
+    #favorites {
+        min-width: none;
+    }
+    #container-main {
+        flex-direction: column;
+    }
 }
