--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,13 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
+    background-color: lightgoldenrodyellow
 }
 table, td {
     background-color: lightblue;
     text-align: center;
     border: 2px solid black;
     border-collapse: collapse;
+    height:fit-content;
 }
 
 #container-main {
@@ -18,9 +20,33 @@ button {
     border-radius: 25%;
 }
 
+#input {
+    display: inline-flex;
+    flex-direction: column;
+    background-color: lightgreen;
+
+    width: 20%;
+    margin-left: 5%;
+    margin-right: 5%;
+    height: fit-content;
+
+    border:solid;
+    border-radius: 15%;
+}
+
+label {
+    text-align: center;
+}
+
+input, select {
+    width:75%;
+    align-self: center;
+    background-color: rgb(167, 238, 167);
+}
+
 @media screen and (min-width: 800px) {
-    table {
-        margin-right: 100px;
+    #extra {
+        margin-left: 100px;
     }
     
     #container-main {
@@ -32,6 +58,14 @@ button {
         height: 85px;
         width: 85px;
     }
+
+    #filter {
+        height:90px;
+        margin-bottom: 5%;
+        margin-left: 15%;
+        margin-right: 15%;
+    }
+
     .remove {
         background-color: rgb(252, 122, 122);
     }
@@ -46,7 +80,6 @@ button {
         height: 60px;
     }
     select {
-        width:60px;
         height:40px
     }
     button {
